force-app/main/default/objects/Action_Plans_Settings__c/Action_Plans_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Set the basic settings for My Action Plans App</description>
    <label>Action Plans Settings</label>
</CustomObject>