force-app/main/default/objects/Action_Plans_Settings__c/fields/Completed_Task_Status__c.field-meta.xml
<CustomField>
    <fullName>Completed_Task_Status__c</fullName>
    <defaultValue>&quot;Completed&quot;</defaultValue>
    <description>The status for completed tasks if automatically closed by Action Plans.</description>
    <label>Completed Task Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>