force-app/main/default/objects/Action_Plans_Settings__c/fields/Unassigned_Task_Default__c.field-meta.xml
<CustomField>
    <fullName>Unassigned_Task_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the Task is Unassigned in the Template, and this is Checked, the assigned User for the Task is the Owner of the Record. If this setting is unchecked, the assigned User for the Task is the Current User.</inlineHelpText>
    <label>Unassigned Task Defaults to Record Owner</label>
    <type>Checkbox</type>
</CustomField>